--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <div>   
         <p>
-            Alhumdolillah If My First Boot-Camp-Class -practice
+            Alhumdolillah If My First Boot-Camp-Class _Practice
         </p>
     </div>
     
